# YT-Statistics

./: LICENSE  README.rst  pyproject.toml
youtube_statistics/: __init__.py  statistics.py
