[tool.poetry]
name = "youtube_statistics"
version = "1.0.0"
description = "Gives specific data from a youtube URL"
authors = ["Kiriam C. Forés <soc@kiriam.cat>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"